	* docs/manual.docbook: update to new features of 0.4.5, mention the 
	  mISDN project, mention other binary packages besides SUSE/Debian,
	  kick out old Debian documentation, replace occurences of CVS with
	  SVN, remove requirement of autotools for SVN build, mention
	  Docbook/XML tools, include documentation for DDI, add update
	  chapter
	* docs/manual-de.docbook: Likewise.

2004-11-26  Gernot Hillier  <gernot@hillier.de>
	* docs/Makefile.am: add man-pages to distribution, hopefully finally
	  avoid to have them created during normal build
	* docs/manual.docbook.in: renamed to manual.docbook again

2004-11-07  Gernot Hillier  <gernot@hillier.de>
	* configure.in: test for the sfftobmp version installed
	* acinclude.m4 (CS_TEST_SFFTOBMP): Likewise.
	* scripts/cs_helpers.pyin (sfftotiff,sendMIMEMail): New function which
	  calls sfftobmp so that the parameters can be easily changed. Include
	  two versions for sfftomp 2.x and 3.x. Thanks for reporting this
	  issue goes to Edelhard Becker.
	* scripts/Makefile.am (.pyin.py): Choose the right sfftobmp call
	  automatically during build.
	* acinclude.m4 (CS_SET_DOCDIR,CS_TEST_GCC3): fix underquoted macros
	* scripts/cs_helpers.pyin (sendMIMEMail,sendSimpleMail): use smtplib
	  instead of manual call to sendmail as many reports showed that 
	  calling sendmail doesn't work reliable on some systems
	* scripts/cs_helpers.pyin (sendMIMEMail): add parameters to tiff2ps, gs
	  and ps2pdf which prevent cropping of fax pages. Thanks to all the
	  people who contributed suggestions and patches to bug #55.
	* scripts/capisuitefax.in: Likewise.

2004-07-15  Gernot Hillier  <gernot@hillier.de>
	* configure.in: support new parameter in ALERT_REQ of newer capi4linux
	  versions, thx to Steffen Barszus for reporting and the fix
	* src/backend/capi.cpp (Capi::alert_req): Likewise.
	* acinclude.m4 (CS_TEST_CAPI4LINUX): Likewise. 

2004-06-10  Gernot Hillier  <gernot@hillier.de>